--- a/css/main.css
+++ b/css/main.css
@@ -19,3 +19,18 @@ ul li a {
     text-decoration: none;
     color: #fff;
 }
+.section-dos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+.texto-2 h2{
+    font-size: 2.5rem;
+}
+.texto-2 ul {
+    color: black;
+    list-style: disc;
+    flex-direction: column;
+
+}
