--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+/* estilos generales */
+body{
+    font-family: "open sans";
+}
+
 /* estilos header */
 header nav {
     display: flex;
@@ -18,4 +23,37 @@ ul {
 ul li a {
     text-decoration: none;
     color: #fff;
+}
+
+/* estilos de section uno */
+
+.section-uno{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 60vh;
+}
+
+.texto h1{
+    font-weight: 900;
+    font-size: 55px;
+    line-height: 65px;
+}
+
+.texto p{
+    font-size: 25px;
+}
+
+img{
+    width: 30%;
+    height: 60%;
+    object-fit: contain;
+}
+
+button{
+    background-color: black;
+    color: whitesmoke;
+    padding: 1rem;
+    border-radius: 12px;
+    font-weight: 700;
 }
