--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /* estilos generales */
-body{
+body {
     font-family: "open sans";
 }
 
@@ -8,12 +8,14 @@ header {
     display: flex;
     justify-content: space-between;
     background: white;
-    border-bottom: 1px;
-    border-color: #000000;
-    height: 20vh;
+    border-bottom: 1px solid black;
+    height: 7vh;
     align-content: center;
     padding: 21px;
+    align-items: center;
 }
+
+
 
 header nav {
     align-items: center;
@@ -21,10 +23,29 @@ header nav {
     text-align: center;
 }
 
+header .header-r {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-content: center;
+    gap: 16px;
+}
+
+header .header-r .boton {
+    background-color: #000;
+    padding: 7px 16px;
+    border-radius: 7px;
+    color: #fff;
+    text-align: center;
+    font-weight: 700;
+    align-content: center;
+}
+
 ul {
     display: flex;
     list-style: none;
     gap: 16px;
+    align-content: center;
 }
 
 ul li a {
@@ -34,45 +55,48 @@ ul li a {
 
 /* estilos de section uno */
 
-.section-uno{
+.section-uno {
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 60vh;
 }
 
-.texto h1{
+.texto h1 {
     font-weight: 900;
     font-size: 55px;
     line-height: 65px;
 }
 
-.texto p{
+.texto p {
     font-size: 25px;
 }
 
-img{
+img {
     width: 30%;
     height: 60%;
     object-fit: contain;
 }
 
-button{
+button {
     background-color: black;
     color: whitesmoke;
     padding: 1rem;
     border-radius: 12px;
     font-weight: 700;
 }
+
 .section-dos {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 50px;
 }
-.texto-2 h2{
+
+.texto-2 h2 {
     font-size: 2.5rem;
 }
+
 .texto-2 ul {
     color: black;
     list-style: disc;
